:art: Fix spacing of cards

--- a/css/main.scss
+++ b/css/main.scss
@@ -63,7 +63,7 @@ h1, h2, h3 {
 }
 
 @media (max-width : 992px) {
-  section .mobile-mb {
-    margin-bottom: 1.25em;
+  div .mobile-mb {
+    margin-bottom: 0.75em;
   }
 }
